<resources>
    <string name="app_name">SPGSystem</string>
    <string name="login">Se connecter</string>
    <string name="username">Nom d`utilisateur</string>
    <string name="firstName">Nom</string>
    <string name="lastName">Prénom</string>
    <string name="email">Email</string>
    <string name="subscribe">Création d`un compte</string>
    <string name="password">Mot de passe</string>
    <string name="forgetPassword">Mot de passe Oblié</string>
    <string name="newAccount">Nouveau Compte</string>
    <string name="listOfServices">Services</string>
    <string name="exit">Quitter</string>
    <string name="about">Apropos</string>
    <string name="contactUs">Contact</string>
    <string name="profile">Profile</string>
    <string name="home">Accueil</string>
    <string name="upload_ballence">Rechargement de crédit</string>
    <string name="number">Numéro de télephone</string>
    <string name="numberFax">Numéro de fax</string>
    <string name="fileHere">Votre fichier ici</string>
    <string name="sendFax">Envoyer Fax</string>
    <string name="ballence">Montant</string>
    <string name="send">Envoyer</string>
    <string name="back">Retour</string>
    <string-array name="operator">
        <item>Mobilis</item>
        <item>Djezzy</item>
        <item>Ooredoo</item>
    </string-array>
    <string name="internetRecharge">Rechargement d`internet</string>
    <string name="email1">ghazeli.aek@gmail.com</string>
    <string name="email2">nadhir.nadiro@gmail.com</string>
    <string name="email3">dhiya.ab@hotmail.com</string>
    <string name="num1">0661310831</string>
    <string name="num2">0696796977</string>
    <string name="num3">0672023497</string>
    <string name="title_activity_profile">profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="signUp">Inscription</string>
    <string name="ADSL">Rechargement ADSL</string>
    <string name="LTE4G">Rechargement 4G LTE</string>
    <string name="title_activity_home2">Accueil</string>
    <string name="update">Mettre à jour</string>
    <string name="updateInfos">Màj. Informations</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Facture">Facture</string>
    <string name="Simple">Simple</string>
    <string name="International">International</string>
    <string name="Maxy">Maxy</string>
    <string name="our_place">Université de Béchar</string>
    <string name="our_email"> sa.team@gmail.com</string>
    <string name="our_phone">+ 213 123 45 67 890</string>
    <string name="our_skype">team_sa</string>
    <string name="new_message_notification_title_template">Nouveau message : %1$s</string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="iD">Id</string>

    <string name="new_message3_notification_title_template">New message3: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message3_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="desc">Nous sommes des petits dévlopeurs qui recherche constamment
                        de nouvelles idées créatives pour vous aider à utiliser nos
                        produits dans  votre  vie  quotidienne.
    </string>

    <string name="desc2">
        SPGSystem permet à vous : Rechargé votre crédit \n ,Compte ADSL,
        4G LTE, et Envoyer un FAX ...,\n Tous  ça où  que  vous soyez
        et  avec un  seul clic..!!
    </string>

    <string name="copyright">
         © SA Team.
    </string>
    <string name="your_infos">
        Votre Informations
    </string>
</resources>
