<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".Services">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/listOfServices"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:srcCompat="@drawable/service" />

            <Button
                android:id="@+id/button10"
                android:layout_width="250dp"
                android:layout_height="39dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/style_btns_login"
                android:onClick="lte4g"
                android:text="@string/internetRecharge"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button22"
                android:layout_width="250dp"
                android:layout_height="39dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_btns_login"
                android:onClick="upload_ballence"
                android:text="@string/upload_ballence"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button23"
                android:layout_width="250dp"
                android:layout_height="39dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_btns_login"
                android:onClick="sendFax"
                android:text="@string/sendFax"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button24"
                android:layout_width="250dp"
                android:layout_height="39dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_btns_login"
                android:onClick="activity_home"
                android:text="@string/back"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>