<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Home2"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/app_bar_home2">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/home"
                android:textSize="50sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:srcCompat="@drawable/image_home" />

            <Button
                android:id="@+id/button20"
                android:layout_width="250dp"
                android:layout_height="39dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/style_btns_login"
                android:gravity="center"
                android:onClick="services_activity"
                android:text="@string/listOfServices"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button17"
                android:layout_width="250dp"
                android:layout_height="39dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_btns_login"
                android:onClick="contact_activity"
                android:text="@string/contactUs"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button19"
                android:layout_width="250dp"
                android:layout_height="39dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_btns_login"
                android:onClick="about_activity"
                android:text="@string/about"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button21"
                android:layout_width="250dp"
                android:layout_height="39dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_btns_login"
                android:onClick="exit"
                android:text="@string/exit"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>